# neutrinos

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  run_generate_smoke.py  submit_sim.slurm
data/Results/: icecube10y_counts_maps.npz  icecube10y_counts_maps.summary.json
data/Sims/Capel_wide/: meta.json  theta.csv  truth_hotspot_sparse.npz
data/Sims/Capel_wide/maps_counts.zarr/: .zarray  0.0.0  1.0.0
docs/: README.md
notebooks/: 01_Fig_1_Capel+_2020.ipynb  02_Fig_2_expected_astro_neutrino_map.ipynb  03_Fig_3_expected_astro+atmo_neutrino_map.ipynb  04_data_to_maps_driver.ipynb  05_generate_sims_capel_wide_driver.ipynb  06_pretrain_deephpx_embedding_driver.ipynb
src/: IceCube_atmo_expected_counts.py  IceCube_expected_nu_counts.py  data_to_maps.py  generate_sims_capel_wide.py  icecube_population_project.py  nu_pop_core.py  pretrain_deephpx_embedding.py
tests/: README.md  test_pretrain_embedding.py  test_reco_pipeline.py
